<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddMoodEventFragment">

    <ImageView
        android:id="@+id/sentio_logo"
        android:layout_width="94dp"
        android:layout_height="74dp"
        android:scaleType="centerCrop"
        android:scaleX="0.75"
        android:scaleY="0.75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@mipmap/sound_wave_layer" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="Add Event"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sentio_logo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="Title"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/eventTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded"
            android:hint="Ex: Party"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:text="Emotional State"
            android:textColor="#FFFFFF" />

        <Spinner
            android:id="@+id/emotionalStateSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/spinner_rounded_background_with_arrow"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:text="Reason"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/reasonEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded"
            android:hint="Ex: Birthday"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:text="Trigger"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/triggerEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded"
            android:hint="Optional"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:text="Social Situation (optional)"
            android:textColor="#FFFFFF" />

        <Spinner
            android:id="@+id/socialSituationSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/spinner_rounded_background_with_arrow"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#FFFFFF" />

        <CheckBox
            android:id="@+id/locationCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded"
            android:padding="4dp"
            android:text="Location"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="Upload an Image (optional)"
            android:textColor="#FFFFFF" />

        <ImageButton
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/rounded_background"
            android:src="@drawable/camera_icon"
            android:id="@+id/imageAdd"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="#F8B64C"
            android:padding="8dp"
            android:text="Save"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>